--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!doctype html>
 <html lang="en">
 <head>
-	<title>
-        ClearTemp
+    <title>
+        ENGO_150's Website
     </title>
 
     <link rel="stylesheet" href="style.css">
