--- a/index.html
+++ b/index.html
@@ -2,15 +2,38 @@
 <html lang="en">
 <head>
     <title>
-        ENGO_150's Website
+        Dark side of the moon
     </title>
 
     <link rel="stylesheet" href="style.css">
     <script type="text/javascript" src="script.js"></script>  
 </head>
 <body>
-    <h1 class="development_text" id="epilepsy" onclick="epilepsy()">
-        This website is in development.
+    <h1 class="welcome_text">
+        Hi there.
     </h1>
+    <h4 class="about">
+        My name is Václav Šmejkal, I'm 15 years old and I perform under the nickname ENGO_150.
+
+        <br>
+        <br>
+        
+        I'm C, Java and Python programmer. One of my projects is <a href="http://github.com/ENGO150/ClearTemp" style="color: #cc7bbb">ClearTemp</a>.
+
+        <br>
+        <br>
+
+        If you want to contact me or anything else, there are my social medias:
+
+        <div class="social">
+            <a href="https://github.com/ENGO150/" style="color: #cc7bbb">GitHub</a>
+            <br>
+            <a href="https://instagram.com/engo_150/" style="color: #cc7bbb">Instagram</a>
+            <br>
+            <a href="https://twitter.com/VaclavSmejkal" style="color: #cc7bbb">Twitter</a>
+            <br>
+            <a href="https://dsc.gg/endev" style="color: #cc7bbb">Discord</a>
+        </div>
+    </h4>
 </body>
 </html>
