--- a/index.html
+++ b/index.html
@@ -35,5 +35,11 @@
             <a href="https://dsc.gg/endev" style="color: #cc7bbb">Discord</a>
         </div>
     </h4>
+
+    <div class="music">
+        <audio controls autoplay>
+            <source src="music.mp3" type="audio/mpeg">
+        </audio>
+    </div>
 </body>
 </html>
