--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <title>
-        Dark side of the moon
+        Dark Side Of The Moon
     </title>
 
     <link rel="stylesheet" href="style.css">
@@ -10,8 +10,15 @@
 </head>
 <body>
     <h1 class="welcome_text">
-        Hi there.
+        <element onclick="musicFunction()">H</element>i there <element onclick="videoFunction()">.</element>
     </h1>
+
+    <div class="video">
+        <video width="270" height="480" controls>
+            <source src="video.mp4" type="video/mp4">
+        </video>
+    </div>
+
     <h4 class="about">
         My name is Václav Šmejkal, I'm 15 years old and I perform under the nickname ENGO_150.
 
@@ -24,6 +31,8 @@
         <br>
 
         If you want to contact me or anything else, there are my social medias:
+
+        <br>
 
         <div class="social">
             <a href="https://github.com/ENGO150/" style="color: #cc7bbb">GitHub</a>
