--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 </head>
 <body>
     <h1 class="welcome_text">
-        <element onclick="musicFunction()">H</element>i there <element onclick="videoFunction()">.</element>
+        <!--<element onclick="musicFunction()">H</element>i there <element onclick="videoFunction()">.</element>-->
+        Hi there.
     </h1>
 
     <div class="video">
@@ -32,6 +33,7 @@
 
         If you want to contact me or anything else, there are my social medias:
 
+        <br>
         <br>
 
         <div class="social">
