re-added script

--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
 </head>
 <body>
     <h1 class="welcome_text">
-        <!--<element onclick="musicFunction()">H</element>i there <element onclick="videoFunction()">.</element>-->
-        Hi there.
+        <element onclick="musicFunction()">H</element>i there <element onclick="videoFunction()">.</element>
     </h1>
 
     <div class="video">
