added another easteregg & simplified ahref color

--- a/index.html
+++ b/index.html
@@ -25,24 +25,24 @@
         <br>
         <br>
         
-        I'm C, Java and Python programmer. One of my projects is <a href="http://github.com/ENGO150/ClearTemp" style="color: #cc7bbb">ClearTemp</a>.
+        I'm C, Java and Python programmer. One of my projects is <a href="http://github.com/ENGO150/ClearTemp">ClearTemp</a>.
 
         <br>
         <br>
 
-        If you want to contact me or anything else, there are my social medias:
+        If you want to contact me or anything else, there are my social medias<a href="https://www.youtube.com/watch?v=qTksCYUgI7s&t" class="reee">:</a>
 
         <br>
         <br>
 
         <div class="social">
-            <a href="https://github.com/ENGO150/" style="color: #cc7bbb">GitHub</a>
+            <a href="https://github.com/ENGO150/">GitHub</a>
             <br>
-            <a href="https://dsc.gg/endev" style="color: #cc7bbb">Discord</a>
+            <a href="https://dsc.gg/endev">Discord</a>
             <br>
-            <a href="https://instagram.com/engo_150/" style="color: #cc7bbb">Instagram</a>
+            <a href="https://instagram.com/engo_150/">Instagram</a>
             <br>
-            <a href="https://twitter.com/VaclavSmejkal" style="color: #cc7bbb">Twitter</a>
+            <a href="https://twitter.com/VaclavSmejkal"">Twitter</a>
         </div>
     </h4>
 
