--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <br>
         <br>
 
-        If you want to contact me or anything else, there are my social medias<a href="https://www.youtube.com/watch?v=qTksCYUgI7s&t" class="reee">:</a>
+        If you want to contact me or anything else, there are my social medias<a href="https://www.youtube.com/watch?v=qTksCYUgI7s" class="reee">:</a>
 
         <br>
         <br>
