--- a/index.html
+++ b/index.html
@@ -30,10 +30,14 @@
         <br>
         <br>
 
-        If you want to contact me or anything else, there are my social medias<a href="https://www.youtube.com/watch?v=qTksCYUgI7s" class="reee">:</a>
+        If you want to contact me or anything else<element onclick="showInfo()">,</element> there are my social medias<a href="https://www.youtube.com/watch?v=qTksCYUgI7s" class="reee">:</a>
 
         <br>
         <br>
+
+        <center>
+            <div class="hidden-text"></div>
+        </center>
 
         <div class="social">
             <a href="https://github.com/ENGO150/">GitHub</a>
