added alert easteregg

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </div>
 
     <h4 class="about">
-        My name is Václav Šmejkal, I'm 15 years old and I perform under the nickname ENGO_150.
+        My name is <element onclick="showAlert()">V</element>áclav Šmejkal, I'm 15 years old and I perform under the nickname ENGO_150.
 
         <br>
         <br>
