--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <div class="video">
         <video width="270" height="480" controls>
-            <source src="video.mp4" type="video/mp4">
+            <source src="res/video.mp4" type="video/mp4">
         </video>
     </div>
 
@@ -52,7 +52,7 @@
 
     <div class="music">
         <audio controls autoplay>
-            <source src="music.mp3" type="audio/mpeg">
+            <source src="res/music.mp3" type="audio/mpeg">
         </audio>
     </div>
 </body>
