implemented rickroll.mp3

--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
             <source src="res/video.mp4" type="video/mp4">
         </video>
     </div>
-    
+
     <div class="music">
         <audio controls autoplay>
-            <source src="res/music.mp3" type="audio/mpeg">
+            <source src="res/rickroll.mp3" type="audio/mpeg">
         </audio>
     </div>
 </body>
