implemented twinkies.mp3

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
     <div class="video">
         <video width="270" height="480" controls>
-            <source src="res/video.mp4" type="video/mp4">
+            <source src="res/twinkies.mp4" type="video/mp4">
         </video>
     </div>
 
