--- a/index.html
+++ b/index.html
@@ -45,13 +45,13 @@
         </div>
     </h4>
 
-    <div class="video">
+    <div class="twinkies">
         <video width="270" height="480" controls>
             <source src="res/twinkies.mp4" type="video/mp4">
         </video>
     </div>
 
-    <div class="music">
+    <div class="rickroll">
         <audio controls autoplay>
             <source src="res/rickroll.mp3" type="audio/mpeg">
         </audio>
