--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     </title>
 
     <link rel="stylesheet" href="style.css">
-    <script type="text/javascript" src="script.js"></script>  
+    <script type="text/javascript" src="script.js"></script>
+
+    <link rel="icon" type="image/x-icon" href="res/favicon.ico">
 </head>
 <body>
     <h1 class="welcome_text">
