implemented profile picture in discord embed

--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
     <script type="text/javascript" src="script.js"></script>
 
     <link rel="icon" type="image/x-icon" href="res/favicon.ico">
+
+    <meta content="ENGO's Website" property="og:title" />
+    <meta content="Page with lot of eastereggs..." property="og:description" />
+    <meta content="https://engo150.github.io" property="og:url" />
+    <meta content="res/engo.jpg" property="og:image" />
+    <meta content="#ff00ff" data-react-helmet="true" name="theme-color" />
 </head>
 <body>
     <h1 class="welcome_text">
