--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="icon" type="image/x-icon" href="res/favicon.ico">
 
     <meta content="ENGO's Website" property="og:title" />
-    <meta content="Page with lot of eastereggs..." property="og:description" />
+    <meta content="Page With Lots of Eastereggs ..." property="og:description" />
     <meta content="https://engo150.github.io" property="og:url" />
     <meta content="res/engo.jpg" property="og:image" />
     <meta content="#ff00ff" data-react-helmet="true" name="theme-color" />
