--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta content="ENGO's Website" property="og:title" />
     <meta content="Page With Lots of Eastereggs ..." property="og:description" />
     <meta content="https://engo150.github.io" property="og:url" />
-    <meta content="res/engo.jpg" property="og:image" />
+    <meta content="https://raw.githubusercontent.com/ENGO150/engo150.github.io/master/res/engo.jpg" property="og:image" />
     <meta content="#ff00ff" data-react-helmet="true" name="theme-color" />
 </head>
 <body>
