--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     </div>
 
     <div class="rickroll">
-        <audio controls autoplay>
+        <audio controls>
             <source src="res/rickroll.mp3" type="audio/mpeg">
         </audio>
     </div>
