--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 
     <h4 class="about">
-        My name is <element onclick="showAlert()">V</element>áclav Šmejkal, I'm 15 years old and I perform under the nickname ENGO_150.
+        My name is <element onclick="showAlert()">V</element>áclav Šmejkal, I'm <element onclick="caughtCountdown()" class="age">15</element> years old and I perform under the nickname ENGO_150.
 
         <br>
         <br>
