added page icon

--- a/res/pages/epsilon.html
+++ b/res/pages/epsilon.html
@@ -5,6 +5,7 @@
         KIFFLOM!
     </title>
 
+    <link rel="icon" type="image/x-icon" href="../epsilon.ico">
     <link rel="stylesheet" href="../../style.css">
 
     <style>
