implemented epsilon exam

--- a/res/pages/epsilon.html
+++ b/res/pages/epsilon.html
@@ -83,5 +83,12 @@
         <br>
         <span class="number">12.</span> KIFFLOM - HAPPINESS IS YOURS! KIFFLOM!
     </div>
+
+    <script>
+        document.addEventListener("keydown", e =>
+        {
+            window.location.href = "epsilon-exam";
+        });
+    </script>
 </body>
 </html>
