--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta content="https://raw.githubusercontent.com/ENGO150/engo150.github.io/master/res/engo.jpg" property="og:image" />
     <meta content="#ff00ff" data-react-helmet="true" name="theme-color" />
 </head>
-<body>
+<body onload="waitForEpsilon()">
     <h1 class="welcome_text">
         <element onclick="musicFunction()">H</element>i there <element onclick="videoFunction()">.</element>
     </h1>
