removed the stupid auto-title thing

--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!doctype html>
 <html lang="en">
 <head>
+    <title>
+        Dark Side of The Moon
+    </title>
+
     <link rel="stylesheet" href="style.css">
     <script type="text/javascript" src="script.js"></script>
 
