changed function failed from redirecting to refreshing

--- a/res/pages/epsilon.html
+++ b/res/pages/epsilon.html
@@ -582,7 +582,7 @@
 
         function failed()
         {
-            window.location.href = "epsilon";
+            location.reload(true);
         }
     </script>
 </body>
