implemented epsilon music

--- a/res/pages/epsilon.html
+++ b/res/pages/epsilon.html
@@ -521,6 +521,10 @@
                 document.getElementsByClassName("first")[0].style.display = "table";
             }, 5000);
 
+            const epsilonMusic = new Audio("../epsilon.mp3");
+            epsilonMusic.loop = true;
+            epsilonMusic.play();
+
             confirmed = true;
         });
 
