--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
     <link rel="stylesheet" href="style.css">
     <script type="text/javascript" src="script.js"></script>
+    <script type="application/javascript" src="http://ipinfo.io/?format=jsonp&callback=checkIP"></script>
 
     <link rel="icon" type="image/x-icon" href="res/favicon.ico">
 
