added why2 to projects

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <br>
         <br>
         
-        I'm C, Java and Python programmer. One of my projects is <a href="http://github.com/ENGO150/ClearTemp">ClearTemp</a>.
+        I'm C, Java and Python programmer. My best projects are <a href="http://github.com/ENGO150/ClearTemp">ClearTemp</a> and <a href="http://github.com/ENGO150/WHY2-Encryption-System">WHY2 Encryption System</a>.
 
         <br>
         <br>
