--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <br>
             <a href="https://instagram.com/engo_150/">Instagram</a>
             <br>
-            <a href="https://twitter.com/VaclavSmejkal"">Twitter</a>
+            <a href="https://twitter.com/VaclavSmejkal">Twitter</a>
         </div>
     </h4>
 
