made links open on new tab

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <br>
         <br>
         
-        I'm C, Java and Python programmer. My best projects are <a href="http://github.com/ENGO150/ClearTemp">ClearTemp</a> and <a href="http://github.com/ENGO150/WHY2-Encryption-System">WHY2 Encryption System</a>.
+        I'm C, Java and Python programmer. My best projects are <a href="http://github.com/ENGO150/ClearTemp" target="_blank">ClearTemp</a> and <a href="http://github.com/ENGO150/WHY2-Encryption-System" target="_blank">WHY2 Encryption System</a>.
 
         <br>
         <br>
@@ -44,13 +44,13 @@
         </center>
 
         <div class="social">
-            <a href="https://github.com/ENGO150/">GitHub</a>
+            <a href="https://github.com/ENGO150/" target="_blank">GitHub</a>
             <br>
-            <a href="https://dsc.gg/endev">Discord</a>
+            <a href="https://dsc.gg/endev" target="_blank">Discord</a>
             <br>
-            <a href="https://instagram.com/engo_150/">Instagram</a>
+            <a href="https://instagram.com/engo_150/" target="_blank">Instagram</a>
             <br>
-            <a href="https://twitter.com/VaclavSmejkal">Twitter</a>
+            <a href="https://twitter.com/VaclavSmejkal" target="_blank">Twitter</a>
         </div>
     </h4>
 
