--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <br>
         <br>
         
-        I'm C, Java and Python programmer. My best projects are <a href="https://github.com/ENGO150/WHY2" target="_blank">WHY2 (Encryption System)</a>, <a href="http://github.com/ENGO150/AnnoyingMarkdown" target="_blank">AnnoyingMarkdown</a> and <a href="http://github.com/ENGO150/ClearTemp" target="_blank">ClearTemp</a>.
+        I'm C, Rust, Java and Python programmer. My best projects are <a href="https://github.com/ENGO150/WHY2" target="_blank">WHY2 (Encryption System)</a>, <a href="http://github.com/ENGO150/AnnoyingMarkdown" target="_blank">AnnoyingMarkdown</a> and <a href="http://github.com/ENGO150/ClearTemp" target="_blank">ClearTemp</a>.
 
         <br>
         <br>
