implemented 'fbi-leaks' :))

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <br>
         <br>
 
-        If you want to contact me or anything else<element onclick="showInfo()">,</element> there are my social medias<a href="https://www.youtube.com/watch?v=qTksCYUgI7s" class="reee">:</a>
+        I<a href="res/fbi-leaks.jpeg" download>f</a> you want to contact me or anything else<element onclick="showInfo()">,</element> there are my social medias<a href="https://www.youtube.com/watch?v=qTksCYUgI7s" class="reee">:</a>
 
         <br>
         <br>
