removed ahref underline and color for 'fbi-leaks'

--- a/index.html
+++ b/index.html
@@ -16,6 +16,14 @@
     <meta content="https://engo150.github.io" property="og:url" />
     <meta content="https://raw.githubusercontent.com/ENGO150/engo150.github.io/master/res/engo.jpg" property="og:image" />
     <meta content="#ff00ff" data-react-helmet="true" name="theme-color" />
+
+    <style>
+        .ignore-ahref
+        {
+            text-decoration: none;
+            color: #bcbcbc;
+        }
+    </style>
 </head>
 <body onload="waitForEpsilon()">
     <h1 class="welcome_text">
@@ -34,7 +42,7 @@
         <br>
         <br>
 
-        I<a href="res/fbi-leaks.jpeg" download>f</a> you want to contact me or anything else<element onclick="showInfo()">,</element> there are my social medias<a href="https://www.youtube.com/watch?v=qTksCYUgI7s" class="reee">:</a>
+        I<a class="ignore-ahref" href="res/fbi-leaks.jpeg" download>f</a> you want to contact me or anything else<element onclick="showInfo()">,</element> there are my social medias<a href="https://www.youtube.com/watch?v=qTksCYUgI7s" class="reee">:</a>
 
         <br>
         <br>
