--- a/index.html
+++ b/index.html
@@ -27,39 +27,45 @@
 </head>
 <body onload="waitForEpsilon()">
     <h1 class="welcome_text">
-        <element onclick="musicFunction()">H</element>i there <element onclick="videoFunction()">.</element>
+        <mark>
+            <element onclick="musicFunction()">H</element>i there <element onclick="videoFunction()">.</element>
+        </mark>
     </h1>
 
 
     <h4 class="about">
-        My name is <element onclick="showAlert()">V</element>áclav Šmejkal, I'm <element onclick="caughtCountdown()" class="age">15</element> years old and I perform under the nickname ENGO_150.
+        <mark>
+            My name is <element onclick="showAlert()">V</element>áclav Šmejkal, I'm <element onclick="caughtCountdown()" class="age">15</element> years old and I perform under the nickname ENGO_150.
 
-        <br>
-        <br>
-        
-        I'm C, Rust, Java and Python programmer. My best projects are <a href="https://github.com/ENGO150/WHY2" target="_blank">WHY2 (Encryption System)</a>, <a href="http://github.com/ENGO150/AnnoyingMarkdown" target="_blank">AnnoyingMarkdown</a> and <a href="http://github.com/ENGO150/ClearTemp" target="_blank">ClearTemp</a>.
-
-        <br>
-        <br>
-
-        I<a class="ignore-ahref" href="res/fbi-leaks.jpeg" download>f</a> you want to contact me or anything else<element onclick="showInfo()">,</element> there are my social medias<a href="https://www.youtube.com/watch?v=qTksCYUgI7s" class="reee">:</a>
-
-        <br>
-        <br>
-
-        <center>
-            <div class="hidden-text"></div>
-        </center>
-
-        <div class="social">
-            <a href="https://github.com/ENGO150/" target="_blank">GitHub</a>
             <br>
-            <a href="https://dsc.gg/endev" target="_blank">Discord</a>
             <br>
-            <a href="https://instagram.com/engo_150/" target="_blank">Instagram</a>
+            
+            I'm C, Rust, Java and Python programmer. My best projects are <a href="https://github.com/ENGO150/WHY2" target="_blank">WHY2 (Encryption System)</a>, <a href="http://github.com/ENGO150/AnnoyingMarkdown" target="_blank">AnnoyingMarkdown</a> and <a href="http://github.com/ENGO150/ClearTemp" target="_blank">ClearTemp</a>.
+
             <br>
-            <a href="https://twitter.com/VaclavSmejkal" target="_blank">Twitter</a>
-        </div>
+            <br>
+
+            I<a class="ignore-ahref" href="res/fbi-leaks.jpeg" download>f</a> you want to contact me or anything else<element onclick="showInfo()">,</element> there are my social medias<a href="https://www.youtube.com/watch?v=qTksCYUgI7s" class="reee">:</a>
+
+            <br>
+            <br>
+
+            <center>
+                <div class="hidden-text"></div>
+            </center>
+
+            <div class="social">
+                <mark>
+                    <a href="https://github.com/ENGO150/" target="_blank">GitHub</a>
+                    <br>
+                    <a href="https://dsc.gg/endev" target="_blank">Discord</a>
+                    <br>
+                    <a href="https://instagram.com/engo_150/" target="_blank">Instagram</a>
+                    <br>
+                    <a href="https://twitter.com/VaclavSmejkal" target="_blank">Twitter</a>
+                </mark>
+            </div>
+        </mark>
     </h4>
 
     <div class="twinkies">
