implemented engo.png

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta content="ENGO's Website" property="og:title" />
     <meta content="Page With Lots of Eastereggs ..." property="og:description" />
     <meta content="https://engo150.github.io" property="og:url" />
-    <meta content="https://raw.githubusercontent.com/ENGO150/engo150.github.io/master/res/engo.jpg" property="og:image" />
+    <meta content="https://raw.githubusercontent.com/ENGO150/engo150.github.io/master/res/engo.png" property="og:image" />
     <meta content="#ff00ff" data-react-helmet="true" name="theme-color" />
 
     <style>
@@ -36,7 +36,7 @@
 
         <br>
         <br>
-        
+
         I'm C, Rust, Java and Python programmer. My best projects are <a href="https://github.com/ENGO150/WHY2" target="_blank">WHY2 (Encryption System)</a>, <a href="http://github.com/ENGO150/AnnoyingMarkdown" target="_blank">AnnoyingMarkdown</a> and <a href="http://github.com/ENGO150/ClearTemp" target="_blank">ClearTemp</a>.
 
         <br>
